# csc299-project

./: PROJECT_PLAN.md  README.md
FINAL/: .gitignore  README.md  SUMMARY.md  description.md  main.py  pyproject.toml
FINAL/.github/agents/: copilot-instructions.md
FINAL/.specify/memory/: constitution.md
FINAL/.specify/templates/: plan-template.md
FINAL/specs/001-student-pkm-cli/: AUDIT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  video.txt
FINAL/specs/001-student-pkm-cli/checklists/: requirements.md
FINAL/specs/001-student-pkm-cli/contracts/: cli-interface.md
FINAL/src/pkm/: __init__.py  __main__.py
FINAL/src/pkm/cli/: __init__.py  add.py  course.py  help.py  helpers.py  main.py  note.py  organize.py  search.py  task.py  view.py
FINAL/src/pkm/models/: __init__.py  common.py  course.py  note.py  task.py
FINAL/src/pkm/services/: course_service.py  id_generator.py  note_service.py  search_service.py  task_service.py
FINAL/src/pkm/storage/: __init__.py  json_store.py  migrations.py  schema.py
FINAL/src/pkm/utils/: __init__.py  date_parser.py  editor.py  id_matcher.py
FINAL/tests/: __init__.py  conftest.py
FINAL/tests/edge_cases/: test_corrupted_data.py
FINAL/tests/integration/: test_add_commands.py  test_course_commands.py  test_note_commands.py  test_organize_commands.py  test_search_commands.py  test_task_commands.py  test_view_commands.py
FINAL/tests/unit/: test_date_parser.py  test_id_matcher.py  test_models.py  test_services.py  test_storage.py
src/models/: Meeting.ts
src/services/: MeetingTracker.ts
task1/: LICENSE  README.md  requirements.txt  setup.py
task1/src/: main.py
task1/src/components/: calendar.py  task_manager.py  timer.py
task1/src/database/: db.py
task1/src/utils/: helpers.py
task1/tests/: test_calendar.py  test_task_manager.py  test_timer.py
task2/: README.md  requirements.txt  setup.py
task2/docs/: API.md
task2/src/: main.py
task2/src/components/: __init__.py  calendar.py  study_tracker.py  task_manager.py  timer.py
task2/src/database/: __init__.py  db.py  models.py
task2/src/utils/: __init__.py  helpers.py
task2/tests/: __init__.py  test_calendar.py  test_study_tracker.py  test_task_manager.py  test_timer.py
task3/: README copy.md  README.md  pyproject.toml  setup.py
task3/src/task3/: __init__.py  knowledge_base.py  pkms.py  task_manager.py
task3/tests/: test_core.py  test_inc.py  test_knowledge_base.py  test_linking.py  test_persistence.py  test_pkms.py  test_search.py  test_task.py  test_task_management.py  test_task_manager.py
task4/: README.md  pyproject.toml
task4/src/task4/: __init__.py
task5/: .gitignore  README.md  pyproject.toml
task5/.specify/memory/: constitution.md
task5/specs/001-task-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
task5/specs/001-task-cli/checklists/: requirements.md
task5/specs/001-task-cli/contracts/: api-contracts.md
task5/src/tasks_cli/: __init__.py  __main__.py  cli.py
task5/src/tasks_cli/commands/: __init__.py  add.py  list.py
task5/src/tasks_cli/models/: __init__.py  task.py
task5/src/tasks_cli/storage/: __init__.py  task_storage.py
task5/tests/contract/: __init__.py  test_storage_contract.py
task5/tests/integration/: __init__.py  test_cli_end_to_end.py
task5/tests/unit/: __init__.py  test_add_command.py  test_list_command.py  test_storage_edge_cases.py  test_task_model.py  test_task_storage.py
tasks3/src/: knowledge_base.py  task_manager.py
