[project]
name = "task3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Flamz-8", email = "parth.v.desai25@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
task3 = "task3:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
